--- a/index.html
+++ b/index.html
@@ -156,21 +156,59 @@
     </section>
 
     <!-- Sandika Galih -->
+    <span>
+      <h1>Sandika Galih</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla
+        felis, tempor sed magna a, egestas viverra tortor. Quisque dui eros,
+        consectetur eu turpis nec, ultrices imperdiet nisl. Suspendisse
+        elementum sodales lobortis. Pellentesque sollicitudin fermentum
+        facilisis. Cras placerat rhoncus velit vitae accumsan. Ut ligula justo,
+        accumsan ac rutrum vitae, molestie ut leo. Donec enim ligula, ornare et
+        neque at, maximus sagittis dolor. Cras eget mattis elit, a volutpat
+        ante. Nunc malesuada massa non lacus gravida, eleifend porta est
+        consequat. Quisque id commodo leo, sed tempus urna. In tincidunt sapien
+        magna, non aliquet dui condimentum at.
+      </p>
+    </span>
+
     <div class="card">
       <img src="./assets/padika.png" alt="Sandika Galih" style="width:100%"">
       <h1>Sandika Galih</h1>
       <p class="title">Dosen WPU</p>
       <p>Harvard University</p>
       <div>
-        <a href="#"><i class="fa fa-dribbble"></i></a> 
-        <a href="#"><i class="fa fa-twitter"></i></a>  
-        <a href="#"><i class="fa fa-linkedin"></i></a>  
-        <a href="#"><i class="fa fa-facebook"></i></a> 
+        <a href="#"><i class="fa fa-dribbble"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
       </div>
     </div>
     <div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla felis, tempor sed magna a, egestas viverra tortor. Quisque dui eros, consectetur eu turpis nec, ultrices imperdiet nisl. Suspendisse elementum sodales lobortis. Pellentesque sollicitudin fermentum facilisis. Cras placerat rhoncus velit vitae accumsan. Ut ligula justo, accumsan ac rutrum vitae, molestie ut leo. Donec enim ligula, ornare et neque at, maximus sagittis dolor. Cras eget mattis elit, a volutpat ante. Nunc malesuada massa non lacus gravida, eleifend porta est consequat. Quisque id commodo leo, sed tempus urna. In tincidunt sapien magna, non aliquet dui condimentum at.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla felis, tempor sed magna a, egestas viverra tortor. Quisque dui eros, consectetur eu turpis nec, ultrices imperdiet nisl. Suspendisse elementum sodales lobortis. Pellentesque sollicitudin fermentum facilisis. Cras placerat rhoncus velit vitae accumsan. Ut ligula justo, accumsan ac rutrum vitae, molestie ut leo. Donec enim ligula, ornare et neque at, maximus sagittis dolor. Cras eget mattis elit, a volutpat ante. Nunc malesuada massa non lacus gravida, eleifend porta est consequat. Quisque id commodo leo, sed tempus urna. In tincidunt sapien magna, non aliquet dui condimentum at.</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla
+        felis, tempor sed magna a, egestas viverra tortor. Quisque dui eros,
+        consectetur eu turpis nec, ultrices imperdiet nisl. Suspendisse
+        elementum sodales lobortis. Pellentesque sollicitudin fermentum
+        facilisis. Cras placerat rhoncus velit vitae accumsan. Ut ligula justo,
+        accumsan ac rutrum vitae, molestie ut leo. Donec enim ligula, ornare et
+        neque at, maximus sagittis dolor. Cras eget mattis elit, a volutpat
+        ante. Nunc malesuada massa non lacus gravida, eleifend porta est
+        consequat. Quisque id commodo leo, sed tempus urna. In tincidunt sapien
+        magna, non aliquet dui condimentum at.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla
+        felis, tempor sed magna a, egestas viverra tortor. Quisque dui eros,
+        consectetur eu turpis nec, ultrices imperdiet nisl. Suspendisse
+        elementum sodales lobortis. Pellentesque sollicitudin fermentum
+        facilisis. Cras placerat rhoncus velit vitae accumsan. Ut ligula justo,
+        accumsan ac rutrum vitae, molestie ut leo. Donec enim ligula, ornare et
+        neque at, maximus sagittis dolor. Cras eget mattis elit, a volutpat
+        ante. Nunc malesuada massa non lacus gravida, eleifend porta est
+        consequat. Quisque id commodo leo, sed tempus urna. In tincidunt sapien
+        magna, non aliquet dui condimentum at.
+      </p>
     </div>
 
     <footer
@@ -267,9 +305,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       let typed = new Typed(".auto-input", {
-        strings: [
-          "Welcome to WPU"
-        ],
+        strings: ["Welcome to WPU"],
         typeSpeed: 100,
         backSpeed: 100,
         loop: true,
